Edited some stuff

--- a/test.html
+++ b/test.html
@@ -4,11 +4,11 @@
 	<title>Test page</title>
 </head>
 <body>
-	<h1>Hey. I'm a big big fat heading </h1>
-	<p>Hey,I'm a <b>paragraph</b> element. Cool huh?</p>
+	<h1>Hi Jasmine </h1>
+	<p>I learnt some  <b>basich</b> html stuff tdy. ngl quite cool?</p>
 	<a href="https://google.com" target="_blank" title="Let's go to google"> Click me! I'm a link</a>
 	<p>My name is:<br>
-	Kitty Cat</p>
+	Meows</p>
 	<img src="img/cat.jpeg">
 </body>
 </html>
