EDited more stuff

--- a/test.html
+++ b/test.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Test page</title>
+	<link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
+	
 	<h1>Hi Jasmine </h1>
-	<p>I learnt some  <b>basich</b> html stuff tdy. ngl quite cool?</p>
-	<a href="https://google.com" target="_blank" title="Let's go to google"> Click me! I'm a link</a>
+	<p>I learnt some  <b>basic</b> html stuff tdy. ngl quite cool?</p>
+	<a href="https://google.com" target="_blank" title="Let's go to google"> Click me! I'm a link to google</a>
 	<p>My name is:<br>
 	Meows</p>
 	<img src="img/cat.jpeg">
